--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -12,21 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyMate"
         tools:targetApi="31">
+        <activity
+            android:name=".group"
+            android:exported="false" />
         <!-- Đặt SplashActivity làm màn hình khởi động -->
         <activity
             android:name=".SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Đặt LoginActivity làm màn hình khởi động -->
+        </activity> <!-- Đặt LoginActivity làm màn hình khởi động -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
