--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/money_mate"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyMate"
         tools:targetApi="31">
+        <activity
+            android:name=".Report"
+            android:exported="false" />
+        <activity
+            android:name=".Setting"
+            android:exported="false" />
         <activity
             android:name=".GroupDetailActivity"
             android:exported="false" />
