--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.MoneyMate"
         tools:targetApi="31">
         <activity
+            android:name=".incomegroups"
+            android:exported="false" />
+        <activity
+            android:name=".Quanli"
+            android:exported="false" />
+        <activity
             android:name=".personal"
             android:exported="false" />
         <activity
